# learnOpencv

./: .gitignore  .gitmodules  CMakeLists.txt
container/: safe_map.h  safe_unordered_set.h
face_detect/: CMakeLists.txt  dnn_tf_face_detect.cc  dnn_tf_face_detect.h  face_detect_interface.h  haar_face_detect.cc  haar_face_detect.h  main.cc
ffmpeg/: CMakeLists.txt  av_bgr24_frame_buffer.cc  av_bgr24_frame_buffer.h  av_codec_global_mutex.cc  av_codec_global_mutex.h  av_decoding_video_frame.cc  av_decoding_video_frame.h  av_defines.h  av_deleter.cc  av_deleter.h  av_demuxer.cc  av_demuxer.h  av_demuxer_interface.h  av_h264_sei_extend.cc  av_h264_sei_extend.h  av_i420_frame_buffer.cc  av_i420_frame_buffer.h  av_input_stream_interface.h  av_muxer.cc  av_muxer.h  av_muxer_interface.h  av_output_stream_interface.h  av_rgb24_frame_buffer.cc  av_rgb24_frame_buffer.h  av_utils.cc  av_utils.h  av_v4l2_capture.cc  av_v4l2_capture.h  av_video_frame.cc  av_video_frame.h  av_video_frame_buffer_factory.cc  av_video_frame_buffer_factory.h  av_video_frame_buffer_interface.h  av_video_frame_buffer_pool.cc  av_video_frame_buffer_pool.h  av_video_frame_interface.h  av_video_writer.cc  av_video_writer.h  ffmpeg.h  input_video_stream.cc  (+8 more)
hello_opencv/: CMakeLists.txt  main.cc
log/: log_helper.h
object_detect/: CMakeLists.txt  main.cc  yolo3_object_detect.cc  yolo3_object_detect.h
open_pose/: CMakeLists.txt  body_pose.cc  body_pose.h  main.cc  open_pose_interface.h
ui/: rgb24_video_preview_widget.cc  rgb24_video_preview_widget.h
utils/: elapsed_time.h  fps.h
video/: CMakeLists.txt  base_camera_interface.h  camera_stream_interface.h  generic_video_stream.cc  generic_video_stream.h  v4l2_camera.cc  v4l2_camera.h  video_stream_sink_interface.h
